Add Production Readiness Audit Report and enhance desktop agent blocking functionality
- Introduced a comprehensive Production Readiness Audit report detailing the status of various components, including backend, frontend, and security metrics.
- Enhanced the desktop agent's blocking engine to support app time limits, allowing for tracking and enforcement of daily usage limits for applications.
- Updated the tracking loop to incorporate app time tracking, ensuring accurate monitoring of application usage.
- Improved the user notification system to inform users when app time limits are reached, enhancing user experience and compliance with usage policies.